--- a/docs/assets/css/styleP.css
+++ b/docs/assets/css/styleP.css
@@ -56,7 +56,7 @@ nav ul li a {
     text-decoration: none;
     font-size: 18px;
     font-weight: bold;
-    font-family: 'Oswald', sans-serif;
+    font-family: 'Montserrat', sans-serif;
 }
 
 nav ul li a:hover {
