--- a/docs/assets/css/styleP.css
+++ b/docs/assets/css/styleP.css
@@ -15,7 +15,7 @@ body {
     background-color: #A6DCEF; /* Gelo Profundo */
     text-align: center;
     color: #EDEFF2; /* Branco Neve */
-    overflow: hidden;
+    /* overflow: hidden; */
 }
 
 nav {
@@ -70,6 +70,7 @@ nav ul li a:hover {
     margin: auto;
     max-width: 1200px;
     box-shadow: 0 0 15px rgba(255, 255, 255, 0.2);
+    margin-bottom: 30px;
 }
 
 .projetos h1 {
@@ -219,47 +220,11 @@ nav ul li a:hover {
     color: #FFFFFF;
 }
 
-/* .modal-link {
-    display: inline-block;
-    margin-top: 15px;
-    padding: 10px 15px;
-    background-color: #3A8FB7;
-    color: #EDEFF2;
-    text-decoration: none;
-    border-radius: 5px;
-    transition: background 0.3s;
-}
-
-.modal-link:hover {
-    background-color: #E3B23C;
-} */
-
 footer {
-    background: #1D2A44; /* Azul Noturno */
-    color: #EDEFF2; /* Branco Neve */
+    background: #1D2A44;
+    color: #EDEFF2;
     padding: 15px;
-    position: fixed;
-    bottom: 0;
     width: 100%;
 }
 
-/* Efeito de neve
-.snowflake {
-    position: fixed;
-    top: -10px;
-    left: 50%;
-    font-size: 10px;
-    color: #EDEFF2;
-    animation: snowfall linear infinite;
-    opacity: 0.8;
-}
-
-@keyframes snowfall {
-    0% {
-        transform: translateY(0) translateX(0);
-    }
-    100% {
-        transform: translateY(100vh) translateX(-10px);
-    }
-} */
 
